# Logic-Loom

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py  profile.skylake.json
logic_loom/: __init__.py  analysis.py  cli.py  codegen.py  compiler.py  cost.py  effects.py  egraph.py  expr.py  parser.py  rules.py  saturate.py  viz.py
tests/: test_analysis.py  test_codegen.py  test_cost_model.py  test_effects.py  test_equivalence.py  test_extended.py  test_optimize.py  test_parser.py
